fix: removed row-gap from card collection to remove extra space

--- a/packages/ontario-design-system-component-library/src/components/ontario-card-collection/ontario-card-collection.scss
+++ b/packages/ontario-design-system-component-library/src/components/ontario-card-collection/ontario-card-collection.scss
@@ -6,6 +6,8 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: spacing.$spacing-6;
+	column-gap: spacing.$spacing-6;
+	row-gap: spacing.$spacing-0;
 	margin: spacing.$spacing-0;
 	padding: spacing.$spacing-0;
 }
